<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pozadina">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/trgovina"
            android:textColor="@color/slova"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/publishButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/pozadina"
            android:contentDescription="@string/add"
            android:src="@android:drawable/ic_menu_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/pozadina"
            android:contentDescription="@string/edit"
            android:src="@android:drawable/ic_menu_edit"
            app:layout_constraintEnd_toStartOf="@+id/publishButton"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/proizvodView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPretrazi" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="60dp"
            android:background="#63768D"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/logOut"
            android:layout_width="48dp"
            android:layout_height="51dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/pozadina"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:src="@drawable/baseline_logout_24"
            app:layout_constraintEnd_toStartOf="@+id/editButton"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#A5B6BC"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/editTextPretrazi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/search"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider4" />

        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:src="@android:drawable/ic_menu_search"
            app:layout_constraintStart_toEndOf="@+id/editTextPretrazi"
            app:layout_constraintTop_toBottomOf="@+id/divider4"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>